fixed overflow texts and nav position

--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -38,6 +38,7 @@ background-color: rgba($white-100, 0.6);
       font-size: 2rem;
       display: flex;
       flex-direction: column;
+      justify-content: end;
       align-items: center;
       row-gap: 1.5rem;
       list-style: none;
